Added search function and replaced static posts

--- a/Backend/login/loginapp/templates/loginapp/Html file/About.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/About.html
@@ -86,59 +86,78 @@
     </head>
     <body>
         	<!--navigation bar-->
-	<div class="header">
-		<nav class="navbar navbar-expand-md navbar-dark navigation">
-			<div class="container">
-				<a href="{% url 'home' %}" class="navbar-brand text-warning font-weight-bold"> 	
-					<img class ="navbar-logo" src = "{% static 'Images/logo1.png' %}">
-				</a>
-
-				<button class ="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsenavbar">
-					<span class="navbar-toggler-icon">	
-					</span>
-				</button>
-				<div class="collapse navbar-collapse text-center " id="collapsenavbar">
-					<ul class="navbar-nav ml-auto mr-auto">
-						<li class="nav-item"> 
-							<a href="{% url 'home' %}" class="nav-link text-white">HOME</a>
-						</li>
-						<li class="nav-item"> 
-							<a href="{% url 'about' %}" class="nav-link text-white">ABOUT US</a>
-						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" style="color: white;">
-								NEWS
-							</a>
-							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<a class="dropdown-item" href="{% url 'politics' %}">
-									POLITICS
-								</a>
-								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="{% url 'entertainment' %}">
-									ENTERTAINMENT
-								</a>
-								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="{% url 'business' %}">
-									BUSINESS
-								</a>
-								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="{% url 'sports' %}">
-									SPORTS
-								</a>
-							</div>
-						</li>
-						<li class="nav-item"> 
-							<a href="{% url 'Tax_calculator' %}" class="nav-link text-white">TAX CALCULATOR</a>
-						</li>
-					</ul>
-					<a href="{% url 'logout' %}" class="nav-link text-white">
-						<button type="button" class="btn btn-primary btn-sm">Logout</button>
-					</a>
-                    <div class="search">
-                        <form class="d-flex">
+            <div class="header">
+                <nav class="navbar navbar-expand-md navbar-dark navigation">
+                  <div class="container">
+                    <a
+                      href="{% url 'home' %}"
+                      class="navbar-brand text-warning font-weight-bold"
+                    >
+                      <img class="navbar-logo" src="{% static 'Images/logo1.png' %}" />
+                    </a>
+          
+                    <button
+                      class="navbar-toggler"
+                      type="button"
+                      data-toggle="collapse"
+                      data-target="#collapsenavbar"
+                    >
+                      <span class="navbar-toggler-icon"> </span>
+                    </button>
+                    <div class="collapse navbar-collapse text-center" id="collapsenavbar">
+                      <ul class="navbar-nav ml-auto mr-auto">
+                        <li class="nav-item">
+                          <a href="{% url 'home' %}" class="nav-link text-white">HOME</a>
+                        </li>
+                        <li class="nav-item">
+                          <a href="{% url 'about' %}" class="nav-link text-white">ABOUT US</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                          <a
+                            class="nav-link dropdown-toggle"
+                            href="#"
+                            id="navbarDropdown"
+                            role="button"
+                            data-toggle="dropdown"
+                            style="color: white"
+                          >
+                            NEWS
+                          </a>
+                          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="{% url 'politics' %}">
+                              POLITICS
+                            </a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{% url 'entertainment' %}">
+                              ENTERTAINMENT
+                            </a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{% url 'business' %}">
+                              BUSINESS
+                            </a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{% url 'sports' %}">
+                              SPORTS
+                            </a>
+                          </div>
+                        </li>
+                        <li class="nav-item">
+                          <a href="{% url 'Tax_calculator' %}" class="nav-link text-white"
+                            >TAX CALCULATOR</a
+                          >
+                        </li>
+                      </ul>
+                      <a href="{% url 'logout' %}" class="nav-link text-white">
+                        <button type="button" class="btn btn-primary btn-sm">
+                          Logout
+                        </button>
+                      </a>
+                      <div class="search">
+                        <form class="d-flex" action="{% url 'search' %}">
                           <input
                             class="form-control"
                             type="search"
+                            name="search"
                             placeholder="Search"
                             aria-label="Search"
                           />
@@ -147,10 +166,10 @@
                           </button>
                         </form>
                       </div>
-				</div>
-			</div>
-		</nav>
-	</div>
+                    </div>
+                  </div>
+                </nav>
+              </div>
     <div class="bg-image">
     </div>
     <div class="container">
