--- a/Backend/login/loginapp/templates/loginapp/Html file/Delete.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/Delete.html
@@ -41,10 +41,20 @@
                   <img class ="navbar-logo" src = "{% static 'Images/logo1.png' %}">
                 </a>
                 </div>
-                <form class="d-flex">
-                  <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-success btn-sm ml-2" type="submit">Search</button>
-                </form>
+                <div class="search">
+                  <form class="d-flex" action="{% url 'search' %}">
+                    <input
+                      class="form-control"
+                      type="search"
+                      name="search"
+                      placeholder="Search"
+                      aria-label="Search"
+                    />
+                    <button class="btn btn-success btn-sm ml-2" type="submit">
+                      Search
+                    </button>
+                  </form>
+                </div>
                 <div style="margin-bottom:5px">
                   <!--logout -->
                   <i class="fa fa-user-circle" style="color: white; font-size: 34px;"></i>
