--- a/Backend/login/loginapp/templates/loginapp/Html file/TaxHistory.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/TaxHistory.html
@@ -34,62 +34,88 @@
          <!--navigation bar-->
          <div class="header">
             <nav class="navbar navbar-expand-md navbar-dark navigation">
-                <div class="container">
-                    <a href="{% url 'home' %}" class="navbar-brand text-warning font-weight-bold"> 	
-                        <img class ="navbar-logo" src = "{% static 'images/logo1.png' %}">
-                    </a>
-    
-                    <button class ="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsenavbar">
-                        <span class="navbar-toggler-icon">	
-                        </span>
-                    </button>
-                    <div class="collapse navbar-collapse text-center " id="collapsenavbar">
-                        <ul class="navbar-nav ml-auto mr-auto">
-                            <li class="nav-item"> 
-                                <a href=" {% url 'home' %}" class="nav-link text-white">HOME</a>
-                            </li>
-                            <li class="nav-item"> 
-                                <a href="./About.html" class="nav-link text-white">ABOUT US</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" style="color: white;">
-                                    NEWS
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="{% url 'politics' %}">
-                                        POLITICS
-                                    </a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="{% url 'entertainment' %}">
-                                        ENTERTAINMENT
-                                    </a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="{% url 'business' %}">
-                                        BUSINESS
-                                    </a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="{% url 'sports' %}">
-                                        SPORTS
-                                    </a>
-                                </div>
-                            </li>
-                            <li class="nav-item"> 
-                                <a href="{% url 'Tax_calculator' %}" class="nav-link text-white">TAX CALCULATOR</a>
-                            </li>
-                        </ul>
-                        <a href="./SignIn.html" class="nav-link text-white">
-                            <button type="button" class="btn btn-primary btn-sm">Sign-in</button>
+              <div class="container">
+                <a
+                  href="{% url 'home' %}"
+                  class="navbar-brand text-warning font-weight-bold"
+                >
+                  <img class="navbar-logo" src="{% static 'Images/logo1.png' %}" />
+                </a>
+      
+                <button
+                  class="navbar-toggler"
+                  type="button"
+                  data-toggle="collapse"
+                  data-target="#collapsenavbar"
+                >
+                  <span class="navbar-toggler-icon"> </span>
+                </button>
+                <div class="collapse navbar-collapse text-center" id="collapsenavbar">
+                  <ul class="navbar-nav ml-auto mr-auto">
+                    <li class="nav-item">
+                      <a href="{% url 'home' %}" class="nav-link text-white">HOME</a>
+                    </li>
+                    <li class="nav-item">
+                      <a href="{% url 'about' %}" class="nav-link text-white">ABOUT US</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                      <a
+                        class="nav-link dropdown-toggle"
+                        href="#"
+                        id="navbarDropdown"
+                        role="button"
+                        data-toggle="dropdown"
+                        style="color: white"
+                      >
+                        NEWS
+                      </a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="{% url 'politics' %}">
+                          POLITICS
                         </a>
-                        <div class="search">
-                         <form class="d-flex mt-3">
-                            <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn btn-success btn-sm ml-2" type="submit">Search</button>
-                          </form>
-                        </div>
-                    </div>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{% url 'entertainment' %}">
+                          ENTERTAINMENT
+                        </a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{% url 'business' %}">
+                          BUSINESS
+                        </a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{% url 'sports' %}">
+                          SPORTS
+                        </a>
+                      </div>
+                    </li>
+                    <li class="nav-item">
+                      <a href="{% url 'Tax_calculator' %}" class="nav-link text-white"
+                        >TAX CALCULATOR</a
+                      >
+                    </li>
+                  </ul>
+                  <a href="{% url 'logout' %}" class="nav-link text-white">
+                    <button type="button" class="btn btn-primary btn-sm">
+                      Logout
+                    </button>
+                  </a>
+                  <div class="search">
+                    <form class="d-flex" action="{% url 'search' %}">
+                      <input
+                        class="form-control"
+                        type="search"
+                        name="search"
+                        placeholder="Search"
+                        aria-label="Search"
+                      />
+                      <button class="btn btn-success btn-sm ml-2" type="submit">
+                        Search
+                      </button>
+                    </form>
+                  </div>
                 </div>
+              </div>
             </nav>
-        </div>
+          </div>
         <div class="container">
             <img src="{% static 'images/teenage-boy.jpg' %}" class="photo mt-5">
             <h5 class="text-center mt-4">David Dhawan</h5>
